--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id("kotlin-parcelize")
-    id 'kotlin-kapt'
+    id 'kotlin-parcelize'
+    id 'com.google.devtools.ksp' version "2.1.0-1.0.29"
 }
 
 android {
-    compileSdkVersion 33
-    buildToolsVersion '31.0.0'
+    compileSdk 35
     buildFeatures {
         buildConfig = true
     }
@@ -15,7 +14,7 @@ android {
     defaultConfig {
         applicationId "com.bts.mypaint"
         minSdkVersion 21
-        targetSdkVersion 33
+        targetSdkVersion 35
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
@@ -82,16 +81,16 @@ android {
     productFlavors {
         dev {
             dimension "environment"
-            versionCode 1
-            versionName "0.0.1"
+            versionCode 2
+            versionName "0.0.2"
 
             buildConfigField "String", "BASE_URL", "\"https://script.google.com/macros/s/\""
 //            buildConfigField "String", "BASE_URL", "\"http://appserver.dahalpratisthan.org\""
         }
         prod {
             dimension "environment"
-            versionCode 1
-            versionName "0.0.1"
+            versionCode 2
+            versionName "0.0.2"
             // Production Url
             buildConfigField "String", "BASE_URL", "\"https://script.google.com/macros/s/\""
 //            buildConfigField "String", "BASE_URL", "\"http://appserver.dahalpratisthan.org\""
@@ -99,8 +98,8 @@ android {
     }
     namespace 'com.bts.mypaint'
 
-    applicationVariants.all { variant ->
-        variant.outputs.all {
+    applicationVariants.configureEach { variant ->
+        variant.outputs.configureEach {
             def flavor = variant.name
             def versionName = variant.versionName
             outputFileName = "mypaint_${flavor}_${versionName}.apk"
@@ -109,28 +108,28 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.6.1'
+//    implementation 'androidx.appcompat:appcompat:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation "androidx.security:security-crypto:1.1.0-alpha06"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
-    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.6.1"
-    implementation 'com.google.android.material:material:1.9.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.8.4'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.8.4'
+    implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.8.4"
+    implementation 'com.google.android.material:material:1.12.0'
     // required to avoid crash on Android 12 API 31
-    implementation("androidx.work:work-runtime-ktx:2.8.1")
+    implementation("androidx.work:work-runtime-ktx:2.9.1")
     // Update navigation
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.7'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.7'
     // network tools
     implementation "com.squareup.retrofit2:retrofit:2.9.0"
     implementation "com.squareup.retrofit2:converter-gson:2.9.0"
     implementation "com.squareup.okhttp3:logging-interceptor:5.0.0-alpha.9"
     // dev tools
     implementation "com.jakewharton.timber:timber:5.0.1"
-    implementation 'androidx.annotation:annotation:1.6.0'
+    implementation 'androidx.annotation:annotation:1.8.2'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    debugImplementation "com.github.chuckerteam.chucker:library:3.5.2"
-    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:3.5.2"
+    debugImplementation "com.github.chuckerteam.chucker:library:4.0.0"
+    releaseImplementation "com.github.chuckerteam.chucker:library-no-op:4.0.0"
     // Koin
     def koin_version = "2.2.3"
     implementation "io.insert-koin:koin-androidx-scope:$koin_version"
@@ -145,28 +144,26 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.14.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.14.2'
     // Paging
-    implementation 'androidx.paging:paging-runtime-ktx:3.1.1'
+    implementation 'androidx.paging:paging-runtime-ktx:3.3.2'
     //image slider
     implementation 'com.ouattararomuald:slider-glide:3.0.1' // If you use Glide
     // Room Components
     implementation "androidx.room:room-ktx:$roomVersion"
-    kapt "androidx.room:room-compiler:$roomVersion"
+    ksp "androidx.room:room-compiler:$roomVersion"
     androidTestImplementation "androidx.room:room-testing:$roomVersion"
-    implementation "androidx.room:room-runtime:2.5.1"
-    implementation 'androidx.core:core-ktx:1.10.1'
-    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.6.4")
+    implementation "androidx.room:room-runtime:2.6.1"
+    implementation 'androidx.core:core-ktx:1.13.1'
+    implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.7.3")
     implementation files('libs/commons-net-3.3.jar')
     implementation files('libs/jtds-1.3.1.jar')
     implementation 'com.github.dhaval2404:imagepicker:2.1'
-    implementation 'androidx.room:room-common:2.5.1'
-    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'androidx.room:room-common:2.6.1'
+    implementation platform('com.google.firebase:firebase-bom:33.1.2')
     implementation 'com.google.firebase:firebase-analytics-ktx'
 
     implementation 'com.google.firebase:firebase-messaging-ktx'
-    implementation 'com.google.firebase:firebase-installations-ktx:17.1.3'
-    implementation('com.khalti:khalti-android:2.01.02') {
-        transitive = true
-    }
+    implementation 'com.google.firebase:firebase-installations-ktx:18.0.0'
+
     implementation 'nl.psdcompany:duo-navigation-drawer:3.0.0'
     //date converter
     implementation('com.github.keyrunHORNET:date_picker_converter:3.0.0') {
